--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,10 @@
-<body>
-  
-</body>
+<app-header></app-header>
+<app-hero></app-hero>
+<app-about></app-about>
+<app-skills></app-skills>
+<app-projects></app-projects>
+<app-testimonials></app-testimonials>
+<app-contact></app-contact>
+<app-footer></app-footer>
   <router-outlet></router-outlet>
 
