--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,16 +1,18 @@
-body {
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background: rgb(11,4,45); /* Fallback */
-    background: linear-gradient(
-      to top left,
-      #120B35 0%,
-      rgba(76,0,255,1) 50%,
-      #120B35 100%
-    );
-    z-index: 1;
-  }
-  
+:host {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+
+  background: linear-gradient(
+    to top left,
+    #120B35 0%,
+    rgba(76, 0, 255, 1) 50%,
+    #120B35 100%
+    
+  );
+  z-index: 1;  
+  overflow-Y: scroll;
+
+}
