Refactored hero component: adjusted styling, added an image, and improved responsiveness. Also added background color to the navigation and fixed its positioning.

--- a/src/app/hero/hero.component.html
+++ b/src/app/hero/hero.component.html
@@ -1,11 +1,18 @@
-<div class="hero-left">
+<header>
+  <div class="hero-left">
     <div>
-        <button></button>
-        <img src="" alt="">
+      <button>CONTACT ME</button>
+      <div class="arrow-container">
+        <img src="assets/img/arrow up .svg" alt="" />
+      </div>
     </div>
-    <h2>FRONTEND DEVELOPER</h2>
-    <h1>Felix Geiss</h1>
-</div>
-<div class="hero-right">
-    <img src="" alt="">
-</div>
+    <div>
+      <h2>FRONTEND DEVELOPER</h2>
+      <h1>Felix Geiss</h1>
+    </div>
+  </div>
+  <div class="img-container">
+    <img src="assets/img/Felix-ai.png" alt="" />
+  </div>
+
+</header>
