--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,18 +1,8 @@
+@import "../mixin.scss";
+@import "../styles.scss";
+
 :host {
-  position: fixed;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
 
-  background: linear-gradient(
-    to top left,
-    #120B35 0%,
-    rgba(76, 0, 255, 1) 50%,
-    #120B35 100%
-    
-  );
-  z-index: 1;  
-  overflow-Y: scroll;
 
+  overflow-y: scroll;
 }
