Adjusted arrow graphic and set a global transition (all 125ms ease-out).

--- a/src/app/hero/hero.component.html
+++ b/src/app/hero/hero.component.html
@@ -3,7 +3,7 @@
     <div>
       <button>CONTACT ME</button>
       <div class="arrow-container">
-        <img src="assets/img/arrow up .svg" alt="" />
+       <a class="icon"href="#"></a>
       </div>
     </div>
     <div>
