--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,6 +1,10 @@
 
 html {
-  font-size: 16px;
+  font-size: 100%; 
+}
+
+* {
+  transition: all 125ms ease-out;
 }
 
 
@@ -144,5 +148,17 @@ h1,h2,h3,h4{
 
 
 @media (max-width: 992px) {
-
+  html {
+    font-size: 12px; 
+  }
 }
+@media (max-width:768px) {
+  html {
+    font-size: 10px; 
+  }
+}
+// @media (max-width: 576px) {
+//   html {
+//     font-size: 14px; 
+//   }
+// }
