Adjusted responsive design

--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -1,4 +1,6 @@
-<div class="abot-left"></div>
+<div class="abot-left">
+  <img src="assets/img/Felix-ai.png" alt="">
+</div>
 <div class="about-right">
   <div>
     <h2>Why me</h2>
