Added .svg icon (location-sign) to About section, created animation and hover effect, made it responsive

--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -1,5 +1,5 @@
 <div class="abot-left">
-  <img src="assets/img/Felix-ai.png" alt="">
+  <img src="assets/img/Felix-ai.png" alt="" />
 </div>
 <div class="about-right">
   <div>
@@ -13,12 +13,16 @@
   </div>
   <div>
     <h3>I am</h3>
-    <img src="" alt="" />
-    <p>located in Munich</p>
+    <div>
+      <img src="assets/img/locaishen-sign .svg" alt="" />
+      <div class="elipse"></div>
+    </div>
+
+    <p>located Stuttgart</p>
   </div>
   <div>
-    <img src="" alt="" />
-    <img src="" alt="" />
+    <img src="assets/img/arrow-curve-left .svg" alt="" />
+    <img src="assets/img/suitcase .svg" alt="" />
     <p>open to relocate</p>
   </div>
   <div>
@@ -26,5 +30,5 @@
     <p>open to work remote</p>
     <img src="" alt="" /><img src="" alt="" />
   </div>
-  <div><button></button></div>
+  <div><button>Let’s talk</button></div>
 </div>
