--- a/src/app/about/about.component.scss
+++ b/src/app/about/about.component.scss
@@ -1,19 +1,102 @@
 @import "../../mixin.scss";
 @import "../../styles.scss";
 
-
-
 :host {
-    @include flex-center($jc:space-between);
+  @include flex-center($jc: space-between, $ai: normal);
+  width: 100%;
+  max-height: 490px;
+}
+
+.about-right {
+  @include flex-center($fd: column, $ai: flex-end, $jc: space-between);
+  max-height: 490px;
+  max-width: $max-width-729;
+  margin-right: $gap-105;
+
+  > div {
     width: 100%;
-    height: 100vh;
+    @include flex-center($fd: column, $ai: flex-end);
+
   }
 
+  > div:nth-child(2),
+  > div:nth-child(3),
+  > div:nth-child(4) {
+    max-width: $max-width-568;
+    @include flex-center($fd: row, $jc: flex-start);
 
-  .about-right{
-    max-width: 729px;
-    @include flex-center($fd:column ,$ai:flex-end);
-    >div{
-        @include flex-center($fd:column,$ai:flex-end)
+
+  
+    > div {
+      position: relative; 
+      @include flex-center($fd: column);
+      margin-right: $gap-8;
+
+      img {
+        width: $img-w-32;
+        &:hover + .elipse {
+          display: block;
+        }
+      }
+
+      .elipse {
+        @include flex-center();
+        display: none;
+        background-image: url("../../assets/img/locaishen-ellipse.svg");
+        background-size: cover;
+        background-repeat: no-repeat;
+        width: $img-w-19; 
+        height:$img-h-8; 
+      }
     }
+
+
+    
   }
+    div:nth-child(3){
+      img:nth-child(1){
+      margin-left:129.689px ;
+   
+      }
+    }
+  h2,
+  h3 {
+    font-family: $font-primary;
+    font-weight: $medium;
+    font-size: $f-s-54;
+    line-height: 1.2;
+    color: $primary-red;
+  }
+h2{
+  margin-bottom: $gap-24;
+}
+  h3 {
+    font-weight: $bold;
+    margin-right: $gap-64;
+  }
+
+  p {
+    font-family: $font-primary;
+    text-align: right;
+    font-weight: $regular;
+    color: $turquoise;
+  }
+}
+
+.abot-left {
+  margin-left: $gap-105;
+  > img {
+    min-width: 157.41px;
+    object-fit: cover;
+    width: 100%;
+    height: 100%;
+    max-height: 490px;
+  }
+}
+
+button{
+padding: 15px 30px;
+border: solid 1px;
+font-size:$f-s-18 ;
+
+}
