--- a/src/app/about/about.component.scss
+++ b/src/app/about/about.component.scss
@@ -2,63 +2,107 @@
 @import "../../styles.scss";
 
 :host {
-  @include flex-center($jc: space-between, $ai: normal);
+  @include flex-center($ai: normal);
   width: 100%;
-  max-height: 490px;
+  height: 100%;
 }
-
+.main-container {
+  @include flex-center($jc: space-between,$ai: normal);
+  width: 100%;
+  margin-right: $gap-105;
+  margin-left: $gap-105;
+  max-width: $max-width;
+  height: 100%;
+}
 .about-right {
   @include flex-center($fd: column, $ai: flex-end, $jc: space-between);
-  max-height: 490px;
-  max-width: $max-width-729;
-  margin-right: $gap-105;
+  max-width:60%;
+
 
   > div {
     width: 100%;
     @include flex-center($fd: column, $ai: flex-end);
-
   }
 
   > div:nth-child(2),
   > div:nth-child(3),
   > div:nth-child(4) {
-    max-width: $max-width-568;
-    @include flex-center($fd: row, $jc: flex-start);
+    p{
+      text-align: left;
+     } 
+    max-width:90%;
+    @include flex-center($fd: column, $ai: flex-end);
+    gap: $gap-8;
+    background-color: rgb(38, 56, 56);
+    width: 100%;
+    > div:nth-child(2) {
+      background-color: green;
+      width: 100%;
+      justify-content: center;
 
+      img:nth-child(1) {
+        height: $img-h-60;
 
-  
+      }
+
+      img:nth-child(2) {
+        margin-right: $gap-8;
+        margin-left: 26%;
+        width: $img-w-30;
+        &:hover {
+          transform: rotate(10deg); 
+          
+        }
+
+      }
+    }
+
+    > div:nth-child(3) {
+      background-color: blue;
+      width: 100%;
+      justify-content: flex-end;
+
+      > img:nth-child(3) {
+        margin-left: $gap-8;
+        margin-right: 31%;
+        width: $img-w-35;
+      
+      }
+    }
     > div {
-      position: relative; 
-      @include flex-center($fd: column);
-      margin-right: $gap-8;
+      position: relative;
+      @include flex-center($fd: row, $jc: flex-start);
 
-      img {
-        width: $img-w-32;
-        &:hover + .elipse {
-          display: block;
+      background-color: black;
+      width: 100%;
+      > div:nth-child(2) {
+        @include flex-center($fd: column);
+        background-color: red;
+        margin-right: $gap-8;
+        img {
+          width: $img-w-32;
+          &:hover + .elipse {
+            display: block;
+          }
+        }
+
+        .elipse {
+          @include flex-center();
+          display: none;
+          background-image: url("../../assets/img/locaishen-ellipse.svg");
+          background-size: cover;
+          background-repeat: no-repeat;
+          width: $img-w-19;
+          height: $img-h-8;
         }
       }
-
-      .elipse {
-        @include flex-center();
-        display: none;
-        background-image: url("../../assets/img/locaishen-ellipse.svg");
-        background-size: cover;
-        background-repeat: no-repeat;
-        width: $img-w-19; 
-        height:$img-h-8; 
-      }
     }
-
-
-    
   }
-    div:nth-child(3){
-      img:nth-child(1){
-      margin-left:129.689px ;
-   
-      }
-    }
+
+  .arrow-curly {
+    height: $img-h-60;
+  }
+
   h2,
   h3 {
     font-family: $font-primary;
@@ -67,12 +111,12 @@
     line-height: 1.2;
     color: $primary-red;
   }
-h2{
-  margin-bottom: $gap-24;
-}
+  h2 {
+    margin-bottom: $gap-24;
+  }
   h3 {
     font-weight: $bold;
-    margin-right: $gap-64;
+    margin-right: $gap-40;
   }
 
   p {
@@ -84,19 +128,57 @@ h2{
 }
 
 .abot-left {
-  margin-left: $gap-105;
-  > img {
-    min-width: 157.41px;
-    object-fit: cover;
+  width: 33.6875rem;
+  min-width: 157.41px;
+  overflow: hidden; 
+
+  img {
+    display: block; 
     width: 100%;
     height: 100%;
-    max-height: 490px;
+    object-fit: cover; 
+   
   }
 }
 
-button{
-padding: 15px 30px;
-border: solid 1px;
-font-size:$f-s-18 ;
 
+.laptop {
+  position: relative;
+  
+  > img:nth-child(1) {
+    margin-right: $gap-8;
+    width: $img-w-54;
+  }
+
+  > img:nth-child(2) {
+    display: none;
+    pointer-events: none;  
+  }
+
+  
+  > img:nth-child(1):hover + img:nth-child(2) {
+    display: block;
+  }
+}
+
+
+.signal{
+  position: absolute;
+  right: 62%;
+  top: 1%;
+  width: 1.5625rem;
+  
+}
+
+
+button {
+  padding: 15px 30px;
+  font-weight: $medium;
+  font-size: $f-s-18;
+  font-family: $font-primary;
+  background-color: $turquoise;
+  color: $backround-blue;
+  &:hover {
+    color: $primary-red;
+  }
 }
