--- a/src/app/skills/skills.component.html
+++ b/src/app/skills/skills.component.html
@@ -1,46 +1,52 @@
-<h2>My Skills</h2>
-
-<div>
-  <img src="" alt="" />
-  <h6>Angular</h6>
-</div>
-<div>
-  <img src="" alt="" />
-  <h6>TypeScript</h6>
-</div>
-<div>
-  <img src="" alt="" />
-  <h6>JavaScript</h6>
-</div>
-<div>
-  <img src="" alt="" />
-  <h6>HTML</h6>
-</div>
-<div>
-  <img src="" alt="" />
-  <h6>CSS</h6>
-</div>
-<div>
-  <img src="" alt="" />
-  <h6>CSS</h6>
-</div>
-<div>
-  <img src="" alt="" />
-  <h6>Firebase</h6>
-</div>
-<div>
-  <img src="" alt="" />
-  <h6>GIT</h6>
-</div>
-<div>
-  <img src="" alt="" />
-  <h6>Scrum</h6>
-</div>
-<div>
-  <img src="" alt="" />
-  <h6>Material design</h6>
-</div>
-<div>
-  <img src="" alt="" />
-  <h6>Challenge</h6>
+<div class="main-container">
+  <h2>My Skills</h2>
+  <div class="skills-icons">
+    <div>
+      <img src="assets/img/type-script.svg" alt="" />
+      <h6>Angular</h6>
+    </div>
+    <div>
+      <img src="assets/img/java-script.svg" alt="" />
+      <h6>TypeScript</h6>
+    </div>
+    <div>
+      <img src="assets/img/HTML.svg" alt="" />
+      <h6>JavaScript</h6>
+    </div>
+    <div>
+      <img src="assets/img/CSS.svg" alt="" />
+      <h6>HTML</h6>
+    </div>
+    <div>
+      <img src="assets/img/rest-api.svg" alt="" />
+      <h6>CSS</h6>
+    </div>
+    <div>
+      <img src="assets/img/GIT.svg" alt="" />
+      <h6>GIT</h6>
+    </div>
+    <div>
+      <img src="assets/img/firebase.svg" alt="" />
+      <h6>Firebase</h6>
+    </div>
+    <div>
+      <img src="assets/img/scrum.svg" alt="" />
+      <h6>Scrum</h6>
+    </div>
+    <div>
+      <img src="assets/img/material-design.svg" alt="" />
+      <h6>
+        Material <br />
+        design
+      </h6>
+    </div>
+    <div class="challenge-container">
+      <img src="assets/img/challenge-me.svg" alt="" />
+      <h6>Challenge <br> me</h6>
+    </div>
+    <div>
+      <p> I am always happy to <br> learn new technologies, <br>just tell me what you <br> need.</p>
+     
+    </div>
+  </div>
 </div>
