--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,5 +1,6 @@
 html {
-  font-size: 100%;
+  font-size: 16px;
+  width: 100%;
 }
 
 * {
@@ -55,6 +56,7 @@ $bold: 700;
 }
 
 //   Layout-Variablen
+$gap-170:10.625rem;
 $gap-105: 6.56rem;
 $gap-100: 6.25rem;
 $gap-64: 4rem;
@@ -62,15 +64,26 @@ $gap-40: 2.5rem;
 $gap-48: 3rem;
 $gap-32: 2rem;
 $gap-24: 1.5rem;
-$gap-10: 0.625rem;
 $gap-16: 1rem;
+$gap-10: 0.625rem;
+
 $gap-8: 0.5rem;
 $gap-2: 0.125rem;
 
-
+$img-w-490 :30.625rem;
 $img-w-32:2rem;
+$img-w-30:1.875rem;
+$img-w-35:2.1875rem;
+$img-w-54:3.375rem;
+$img-w-27:1.6875rem;
 $img-w-19:1.1875rem;
+$img-w-22: 1.375rem;
+
+
+$img-h-70:4.375rem;
+$img-h-50:3.125rem;
 $img-h-8:0.5rem;
+$img-h-60: 3.75rem;
 
 
 // font Size
@@ -147,24 +160,28 @@ h1,
 h2,
 h3,
 h4,
+h5,
+h6,
 p {
   margin: 0;
 }
 
+
+
 @media (max-width: 1200px) {
   html {
-    font-size: 11px;
+    font-size: 12px;
   }
 }
 
 @media (max-width: 992px) {
   html {
-    font-size: 9px;
+    font-size: 10px;
   }
 }
 @media (max-width: 768px) {
   html {
-    font-size: 8px;
+    font-size: 9px;
   }
 }
 // @media (max-width: 576px) {
