feat: Added grid system to skill section

--- a/src/app/skills/skills.component.html
+++ b/src/app/skills/skills.component.html
@@ -2,51 +2,45 @@
   <h2>My Skills</h2>
   <div class="skills-icons">
     <div>
-      <img src="assets/img/type-script.svg" alt="" />
+      <img src="assets/img/type-script.svg" alt="TypeScript" />
       <h6>Angular</h6>
     </div>
     <div>
-      <img src="assets/img/java-script.svg" alt="" />
+      <img src="assets/img/java-script.svg" alt="JavaScript" />
       <h6>TypeScript</h6>
     </div>
     <div>
-      <img src="assets/img/HTML.svg" alt="" />
+      <img src="assets/img/HTML.svg" alt="HTML" />
       <h6>JavaScript</h6>
     </div>
     <div>
-      <img src="assets/img/CSS.svg" alt="" />
+      <img src="assets/img/CSS.svg" alt="CSS" />
       <h6>HTML</h6>
     </div>
     <div>
-      <img src="assets/img/rest-api.svg" alt="" />
+      <img src="assets/img/rest-api.svg" alt="REST API" />
       <h6>CSS</h6>
     </div>
     <div>
-      <img src="assets/img/GIT.svg" alt="" />
+      <img src="assets/img/GIT.svg" alt="GIT" />
       <h6>GIT</h6>
     </div>
     <div>
-      <img src="assets/img/firebase.svg" alt="" />
+      <img src="assets/img/firebase.svg" alt="Firebase" />
       <h6>Firebase</h6>
     </div>
     <div>
-      <img src="assets/img/scrum.svg" alt="" />
+      <img src="assets/img/scrum.svg" alt="Scrum" />
       <h6>Scrum</h6>
     </div>
     <div>
-      <img src="assets/img/material-design.svg" alt="" />
-      <h6>
-        Material <br />
-        design
-      </h6>
+      <img src="assets/img/material-design.svg" alt="Material Design" />
+      <h6>Material <br> design</h6>
     </div>
     <div class="challenge-container">
-      <img src="assets/img/challenge-me.svg" alt="" />
+      <img src="assets/img/challenge-me.svg" alt="Challenge me" />
       <h6>Challenge <br> me</h6>
-    </div>
-    <div>
-      <p> I am always happy to <br> learn new technologies, <br>just tell me what you <br> need.</p>
-     
+      <p>I am always happy to learn new technologies, just tell me what you need.</p>
     </div>
   </div>
 </div>
