--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,11 +1,17 @@
 <app-nav></app-nav>
+<main>
+  <app-hero></app-hero>
+  <app-about></app-about>
+  <app-skills></app-skills>
 
-<app-hero></app-hero>
+  <h2>My Projects</h2>
 
-<app-about></app-about>
-<app-skills></app-skills>
-<app-projects></app-projects>
-<app-testimonials></app-testimonials>
-<app-contact></app-contact>
-<app-footer></app-footer>
+  <ng-container *ngFor="let project of projects; let i = index">
+    <app-projects [project]="project" [isRowReverse]="i % 2 === 1"></app-projects>
+  </ng-container>
+
+  <app-testimonials></app-testimonials>
+  <app-contact></app-contact>
+  <app-footer></app-footer>
+</main>
 <router-outlet></router-outlet>
