--- a/src/app/projects/projects.component.html
+++ b/src/app/projects/projects.component.html
@@ -1,4 +1,15 @@
-<h2>My Projects</h2>
-<app-project-gallery></app-project-gallery>
 
-
+<div class="project-container" [ngStyle]="{'flex-direction': isRowReverse ? 'row-reverse' : 'row'}">
+  <div class="image-container">
+    <img [src]="project.imageUrl" alt="{{ project.title }}">
+  </div>
+  <div class="text-container">
+    <h3>{{ project.title }}</h3>
+    <p class="technologies">{{ project.technologies.join(' | ') }}</p>
+    <p class="description">{{ project.description }}</p>
+    <div class="links">
+      <a [href]="project.githubLink" target="_blank">Github</a>
+      <a [href]="project.liveTestLink" target="_blank">Live Test</a>
+    </div>
+  </div>
+</div>
