--- a/src/app/contact/contact.component.html
+++ b/src/app/contact/contact.component.html
@@ -1,27 +1,37 @@
-<div>
+<div class="contact-header">
   <h2>Contact me</h2>
-  <img src="" alt="" />
+  <!-- Falls du einen Pfeil oder ein Icon haben möchtest -->
+  <img src="assets/img/arrow-down.svg" alt="Arrow" class="arrow" />
 </div>
+
 <form action="">
   <div class="form-left">
     <p>
       Encourage people to contact you and describe what role you are interested
       in. Express interest in contributing to a new project.
     </p>
-    <input type="text" />
-    <input type="text" />
+    <input type="text" placeholder="Your Name" />
+    <input type="email" placeholder="Your Email" />
   </div>
+
   <div class="form-right">
-    <a href=""
-      ><img src="" alt="" /><span>E-mail: mustermail&#64;gmail.com</span></a
-    >
-    <a href=""><img src="" alt="" /><span>Tel: 0157 123 456 68</span></a>
-    <input type="text" />
+    <a href="mailto:mustermail@gmail.com">
+      <div class="letter"></div>
+      <span>E-mail: mustermail&#64;gmail.com</span>
+    </a>
+    <a href="tel:015712345668">
+     <div class="phone"></div>
+      <span>Tel: 0157 123 456 68</span>
+    </a>
+    <textarea placeholder="Your Message"></textarea>
   </div>
-  <label>
-    <input type="checkbox" />
+
+  <label class="privacy">
+    <input  type="checkbox" (change)="isCheckt($event)" />
     I've read the <a href="">privacy policy</a> and agree to the processing of
     my data as outlined.
   </label>
-  <button></button>
+<div class="button-container">
+  <button [disabled]="!isChecked">Senden</button>
+  </div>
 </form>
