--- a/src/app/testimonials/testimonials.component.html
+++ b/src/app/testimonials/testimonials.component.html
@@ -1,26 +1,32 @@
-<h4>Need a teamplayer? Here what my colleagues said about me</h4>
-<img src="" alt="" />
-<div>
-  <h4>Noah Mueller</h4>
-  <h5>Project Sharkie</h5>
-  <p>
-    ‘’Marcus had to develop, format and deliver content in collaboration with
-    the team members.He is a reliable and friendly person.’’
-  </p>
-</div>
-<div>
-  <h4>Evelyn Marx</h4>
-  <h5>roject Pollo Loco</h5>
-  <p>
-    ‘’ He is a trustworthy teamplayer and can cope with the stress of deadlines.
-    Structured work and clear code. ‘’
-  </p>
-</div>
-<div>
-  <h4>James Rugman</h4>
-  <h5>Project Join</h5>
-  <p>
-    ‘’ He is a reliable and friendly person. Work in a structured way and write
-    a clear code. I recommend him as a colleague.’’
-  </p>
+<div class="main-container">
+  <h4>Need a teamplayer? Here what my colleagues said about me</h4>
+  <div>
+    <div>
+      <img src="assets/img/arrow-curve-left-big.svg" alt="" />
+      <div class="text-container">
+        <h4>Noah Mueller</h4>
+        <h5>Project Sharkie</h5>
+        <p>
+          ‘’Marcus had to develop, format and deliver content in collaboration
+          with the team members.He is a reliable and friendly person.’’
+        </p>
+      </div>
+    </div>
+    <div class="text-container">
+      <h4>Evelyn Marx</h4>
+      <h5>roject Pollo Loco</h5>
+      <p>
+        ‘’ He is a trustworthy teamplayer and can cope with the stress of
+        deadlines. Structured work and clear code. ‘’
+      </p>
+    </div>
+    <div class="text-container">
+      <h4>James Rugman</h4>
+      <h5>Project Join</h5>
+      <p>
+        ‘’ He is a reliable and friendly person. Work in a structured way and
+        write a clear code. I recommend him as a colleague.’’
+      </p>
+    </div>
+  </div>
 </div>
