--- a/src/styles.scss
+++ b/src/styles.scss
@@ -7,7 +7,6 @@ html {
   transition: all 125ms ease-out;
 }
 
-
 // color
 
 $backround-blue: #120b35;
@@ -57,6 +56,12 @@ $bold: 700;
 }
 
 //   Layout-Variablen
+
+$padding-15: 0.9375rem;
+$padding-30: 1.875rem;
+
+$padding-62:  3.875rem;
+
 $gap-170: 10.625rem;
 $gap-105: 6.56rem;
 $gap-100: 6.25rem;
@@ -72,6 +77,7 @@ $gap-8: 0.5rem;
 $gap-2: 0.125rem;
 
 $img-w-490: 30.625rem;
+$img-w-82: 5.375rem;
 $img-w-32: 2rem;
 $img-w-30: 1.875rem;
 $img-w-35: 2.1875rem;
@@ -89,8 +95,11 @@ $img-h-60: 3.75rem;
 $f-s-82: 5.125rem;
 $f-s-54: 3.375rem;
 $f-s-48: 3rem;
+$f-s-24:1.5rem;
 $f-s-22: 1.375rem;
+$f-s-20:1.25rem;
 $f-s-18: 1.125rem;
+$f-s-14:0.875rem;
 
 $max-width: 1920px;
 $max-width-729: 45.5625rem;
@@ -131,9 +140,8 @@ body {
   height: 100%;
 }
 
-main{
+main {
   margin: 0 $gap-105;
-
 }
 
 a {
@@ -169,8 +177,6 @@ h6,
 p {
   margin: 0;
 }
-
-
 
 @media (max-width: 1200px) {
   html {
