--- a/src/app/contact/contact.component.scss
+++ b/src/app/contact/contact.component.scss
@@ -1,9 +1,21 @@
 @import "../../mixin.scss";
 @import "../../styles.scss";
 
+:host {
+  @include flex-center($fd:column);
+
+
+}
+.form-container{
+  width: 100%;
+  max-width: $max-width;
+}
 .contact-header {
   @include flex-center($jc: flex-start, $ai: flex-end);
   margin: 2rem 0;
+
+
+
 
   > h2 {
     font-family: $font-primary;
@@ -22,6 +34,7 @@
 
 /* Formular */
 form {
+ 
   display: flex;
   flex-wrap: wrap; /* Für Responsive-Verhalten */
   padding: 2rem 0;
@@ -32,6 +45,7 @@ form {
     @include flex-center($fd: column, $ai: flex-start, $jc: space-between);
     flex: 1 1;
     position: relative;
+    width: 100%;
 
     p {
       font-family: $font-primary;
@@ -87,12 +101,11 @@ form {
   /* Textarea für Nachricht */
   textarea {
     width: 100%;
-    height: 120px;
+    height: 9rem;
     background: transparent;
     border: 2px solid $turquoise;
     padding: 0.5rem;
     resize: vertical;
-    margin-top: 1rem;
     box-sizing: border-box;
     font-family: $font-primary;
     font-weight: $regular;
@@ -114,9 +127,9 @@ form {
     }
   }
 
-  /* Inputs (Name, E-Mail usw.) */
   input[type="text"],
   input[type="email"] {
+    height:3.5rem;
     width: 100%;
     box-sizing: border-box;
     background: transparent;
@@ -127,6 +140,7 @@ form {
     font-size: $f-s-14;
     color: $turquoise;
     line-height: 140%;
+   
 
     &::placeholder {
       font-family: $font-primary;
@@ -154,23 +168,20 @@ form {
   
     input[type="checkbox"] {
       margin-right: 0.5rem;
-      // Entferne die native Darstellung
       appearance: none;
       -webkit-appearance: none;
-      width: 1.125rem; // Passe die Größe nach Bedarf an
+      width: 1.125rem; 
       height: 1.125rem;
       border: 2px solid $primary-red;
       border-radius: 3px;
       cursor: pointer;
 
       &:hover {
-        // Beispiel: Ändert Hintergrund und Border im Hover-Zustand
         background: $turquoise;
       }
   
       &:checked {
         background:$turquoise ;
-        // Optional: Pseudo-Element für ein Häkchen
         position: relative;
         
         &::after {
@@ -190,6 +201,7 @@ form {
   
     a {
       color: $primary-red;
+      margin: 0 0.5rem;
   
       &:hover {
         text-decoration: underline;
@@ -224,5 +236,39 @@ form {
   }  
 }
 
+}
 
+
+.input-wrapper {
+  margin-top: 1rem;
+  position: relative;
+  width: 100%;
+  
+  @include flex-center();
+  
+
+}
+
+.validation-icon {
+  position: absolute;
+  top: 50%;
+  right: 0.75rem; 
+  transform: translateY(-50%);
+  width: 1.25rem;
+  height: 1.25rem;
+}
+.validation-icon-message{
+  position: absolute;
+ top: 10%;
+  right: 0.75rem; 
+  width: 1.25rem;
+  height: 1.25rem;
+}
+
+
+input.error::placeholder,
+textarea.error::placeholder {
+  font-weight:$regular !important;
+  color: $error-red !important;
+  opacity: 100% !important;
 }
