--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -1,16 +1,19 @@
-<div>
-  <span>&lt;FG&gt;</span>
+<div class="logo">
+  <a href=""> &lt;FG&gt;</a>
+
   <p>Frontend developer</p>
 </div>
 
-<div>
+<div class="middle-container">
   <span>Felix Geiss 2025</span>
+  <div>
   <a href="">Legal notice</a>
   <a href="">privacy policy</a>
+  </div>
 </div>
 
-<div>
-  <a href=""><img src="" alt="" /></a>
-  <a href=""><img src="" alt="" /></a>
-  <a href=""><img src="" alt="" /></a>
+<div class="icon-container">
+  <a><div class="git-hup"></div></a>
+  <a><div class="email"></div></a>
+  <a><div class="linkedin"></div></a>
 </div>
