--- a/src/app/main-conten/hero/hero.component.html
+++ b/src/app/main-conten/hero/hero.component.html
@@ -1,7 +1,7 @@
 <header>
   <div class="hero-left">
     <div>
-      <button>CONTACT ME</button>
+      <a href="">CONTACT ME</a>
 
       <div class="arrow-container">
         <a class="icon" href="#"></a>
