--- a/src/app/main-conten/contact/contact.component.html
+++ b/src/app/main-conten/contact/contact.component.html
@@ -1,3 +1,12 @@
+
+
+<div class="header-contact">
+<h2>Contact me</h2>
+<img src="assets/img/arrow-down.svg" alt="">
+</div>
+
+
+
 <form [formGroup]="contactForm" (ngSubmit)="onSubmit()">
   <div class="form-left">
     <p>
@@ -55,13 +64,13 @@
   </div>
 
   <div class="form-right">
-    <a href="mailto:mustermail@gmail.com">
+    <a href="mailto:geissq@gmail.com.com">
       <div class="letter"></div>
-      <span>E-mail: mustermail&#64;gmail.com</span>
+      <span>E-mail: geissq&#64;gmail.com</span>
     </a>
-    <a href="tel:015712345668">
+    <a href="tel:015222492773">
       <div class="phone"></div>
-      <span>Tel: 0157 123 456 68</span>
+      <span>Tel: 0152 224 927 73</span>
     </a>
 
     <div class="input-wrapper">
@@ -90,7 +99,7 @@
 
   <label class="privacy">
     <input type="checkbox" (change)="isCheckt($event)" />
-    I've read the <a href="">privacy policy</a> and agree to the processing of my data as outlined.
+    I've read the <a href="privacy-policy">privacy policy</a> and agree to the processing of my data as outlined.
   </label>
   <div class="button-container">
     <button type="submit" [disabled]="!isChecked || contactForm.invalid">Senden</button>
