--- a/src/app/main-conten/hero/hero.component.scss
+++ b/src/app/main-conten/hero/hero.component.scss
@@ -1,6 +1,5 @@
-@import "../../mixin.scss";
-@import "../../styles.scss";
-
+@import "../../../mixin.scss";
+@import "../../../styles.scss";
 :host {
   @include flex-center();
   width: 100%;
@@ -18,7 +17,7 @@ header {
 
 .hero-left {
   @include flex-center($fd: column, $jc: space-between, $ai: flex-start);
-  width: 70%;
+  width: 50%;
 
   > div {
     height: 50%;
@@ -31,50 +30,64 @@ header {
     > div:nth-child(2) {
       height: 100%;
       @include flex-center($ai: flex-end);
+      
       > .icon {
-        width: 22px;
-        height: 50px;
-        padding: 10px;
-        background-image: url("../../assets/img/arrow up .svg");
+        width: 1.375rem;           
+        height: 3.125rem;         
+        padding: 0.625rem;        
+        background-image: url("../../../assets/img/arrow up .svg");
         background-repeat: no-repeat;
         background-position: center;
+        background-size: contain;
+        background-origin: content-box; 
         transform: scaleY(-1);
         transition: all 125ms ease-out;
+        border: 0.0625rem solid transparent; 
+     
         &:hover {
-          border: 1px solid $turquoise;
-          background-image: url("../../assets/img/arrow-up-hover.svg");
+          border-color: $turquoise;           
+          background-image: url("../../../assets/img/arrow-up-hover.svg");
+          background-size: contain;
+          background-origin: content-box;
         }
       }
     }
   }
+
   > div:nth-child(2) {
     @include flex-center($fd: column, $jc: flex-end, $ai: flex-start);
   }
 }
 
-button {
+
+
+
+a{
+  display: inline-block;
   color: $primary-red;
   font-family: $font-primary;
   font-weight: $medium;
   font-size: $f-s-18;
   border: 1px solid $turquoise;
-  padding: 10px 15px;
+  padding: 0.625rem 0.9375rem;
   transform: rotate(-90deg);
-
+  text-decoration: none;
+  
   &:hover {
     color: $turquoise;
   }
 }
 
+
 .img-container {
   width:20rem;
-  overflow: hidden; // Überschüssiger Inhalt wird verborgen
+  overflow: hidden; 
 
   img {
     width: 100%;
     height: 100%;
-    object-fit: cover; // Bild füllt den Container vollständig aus
-    object-position: top; // Bild wird oben ausgerichtet, sodass unten abgeschnitten wird
+    object-fit: cover; 
+    object-position: top; 
   }
 }
 
