--- a/src/app/main-conten/projects/projects.component.scss
+++ b/src/app/main-conten/projects/projects.component.scss
@@ -1,6 +1,5 @@
-@import "../../mixin.scss";
-@import "../../styles.scss";
-
+@import "../../../mixin.scss";
+@import "../../../styles.scss";
 
 
 :host {
