--- a/src/app/main-conten/testimonials/testimonials.component.scss
+++ b/src/app/main-conten/testimonials/testimonials.component.scss
@@ -1,5 +1,5 @@
-@import "../../mixin.scss";
-@import "../../styles.scss";
+@import "../../../mixin.scss";
+@import "../../../styles.scss";
 
 :host {
   @include flex-center($fd:column);
