--- a/src/app/shared/footer/footer.component.scss
+++ b/src/app/shared/footer/footer.component.scss
@@ -1,5 +1,5 @@
-@import "../../mixin.scss";
-@import "../../styles.scss";
+@import "../../../mixin.scss";
+@import "../../../styles.scss";
 
 :host {
   @include flex-center($jc: space-between);
@@ -53,38 +53,38 @@ p{
 }
 
 .git-hup {
-  background-image: url("../../assets/img/github.svg");
+  background-image: url("../../../assets/img/github.svg");
   width: 1.875rem;
   height: 1.875rem;
   background-repeat: no-repeat;
   background-size: contain;
 
   &:hover {
-    background-image: url("../../assets/img/github-hover.svg");
+    background-image: url("../../../assets/img/github-hover.svg");
   }
 }
 
 .email {
-  background-image: url("../../assets/img/email.svg");
+  background-image: url("../../../assets/img/email.svg");
   width: 1.875rem;
   height: 1.875rem;
   background-repeat: no-repeat;
   background-size: contain;
 
   &:hover {
-    background-image: url("../../assets/img/email-hover.svg");
+    background-image: url("../../../assets/img/email-hover.svg");
   }
 }
 
 .linkedin {
-  background-image: url("../../assets/img/linkedin.svg");
+  background-image: url("../../../assets/img/linkedin.svg");
   width: 1.875rem;
   height: 1.875rem;;
   background-repeat: no-repeat;
   background-size: contain;
 
   &:hover {
-    background-image: url("../../assets/img/linkedin-hover.svg");
+    background-image: url("../../../assets/img/linkedin-hover.svg");
   }
 }
 
