Created mixin for fonds and implemented it across all sections

--- a/src/app/legal-notice/legal-notice.component.html
+++ b/src/app/legal-notice/legal-notice.component.html
@@ -1,1 +1,17 @@
-<p>legal-notice works!</p>
+<div class="imprintContainer">
+  <div class="imprint">
+    <h2>Imprint</h2>
+    <h2 id="m46">Diensteanbieter</h2>
+    <p>Felix Geiss</p>
+    <p>Fanny-Leicht-Str. 4</p>
+    <p>70563 Stuttgart-Vaihingen</p>
+
+    <h2 id="m56">Kontaktmöglichkeiten</h2>
+    <p>
+      <a href="mailto:geissq@gmail.com.com">
+        <div class="letter"></div>
+        <span>E-mail: geissq&#64;gmail.com</span>
+      </a>
+    </p>
+  </div>
+</div>
