--- a/src/app/main-conten/about/about.component.scss
+++ b/src/app/main-conten/about/about.component.scss
@@ -14,48 +14,34 @@
 }
 .about-right {
   @include flex-center($fd: column, $ai: flex-end, $jc: space-between);
-  width: 70%;
-  >div:nth-child(2){
- >div{
-  margin-bottom: 1rem;
- }
+  width: 55%;
+  > div:nth-child(2) {
+    > div {
+      margin-bottom: 1rem;
+    }
   }
 
   h2 {
+    @include fonts();
     text-align: right;
-    font-family: $font-primary;
-    font-weight: $medium;
-    font-size: $f-s-54;
-    line-height: 1.2;
-    color: $primary-red;
     margin-bottom: $gap-24;
   }
 
   h3 {
-    font-family: $font-primary;
-    font-weight: $medium;
-    font-size: $f-s-54;
-    line-height: 1.2;
-    color: $primary-red;
-    font-weight: $bold;
+    @include fonts($fw: $bold);
     position: absolute;
     left: 0;
   }
 
   p {
-    font-family: $font-primary;
+    @include fonts($fc: $turquoise, $fs: $f-s-18);
     text-align: right;
-    font-weight: $regular;
-    color: $turquoise;
   }
   a {
+    @include fonts($fs: $f-s-18, $fc: $backround-blue);
     display: inline-block;
     padding: 0.9375rem 1.875rem;
-    font-weight: $medium;
-    font-size: $f-s-18;
-    font-family: $font-primary;
     background-color: $turquoise;
-    color: $backround-blue;
   }
 
   a:hover {
@@ -87,7 +73,7 @@
     }
     > div {
       @include flex-center($fd: column);
-     height:3rem;
+      height: 3rem;
     }
 
     &:hover .elipse {
@@ -115,11 +101,10 @@
       transition: transform 0.3s ease;
       width: 2rem;
       margin-right: 1rem;
-
     }
-      &:hover img:nth-child(2) {
-        transform: rotate(6deg);
-      }
+    &:hover img:nth-child(2) {
+      transform: rotate(6deg);
+    }
     .arrow-curve-left {
       position: absolute;
       left: -13rem;
