--- a/src/app/main-conten/contact/contact.component.scss
+++ b/src/app/main-conten/contact/contact.component.scss
@@ -15,10 +15,7 @@ max-width: $max-width;
     margin-left: 1rem;
   }
   > h2 {
-    font-family: $font-primary;
-    font-weight: $medium;
-    font-size: $f-s-54;
-    color: $primary-red;
+    @include fonts();
   }
 }
 .form-container{
@@ -54,10 +51,7 @@ form {
     width: 100%;
 
     p {
-      font-family: $font-primary;
-      font-weight: $regular;
-      font-size: $f-s-18;
-      color: $turquoise;
+      @include fonts($fc:$turquoise,$fs:$f-s-18);
     }
   }
 
@@ -68,10 +62,7 @@ form {
 
 
     a {
-      font-family: $font-primary;
-      font-weight: $medium;
-      font-size: $f-s-20;
-      color: $turquoise;
+      @include fonts($fc:$turquoise,$fs:$f-s-20);
       @include flex-center();
 
       .letter {
@@ -163,10 +154,7 @@ form {
   }
 
   .privacy {
-    font-family: $font-primary;
-    font-weight: $regular;
-    font-size: $f-s-14;
-    color: $turquoise;
+    @include fonts($fc:$turquoise,$fs:$f-s-14);
     margin-top: 1rem;
     width: 100%;
     @include flex-center($jc:flex-start);
@@ -226,15 +214,12 @@ form {
     width: 100%;
     @include flex-center($jc:flex-end);
    > button {
-    font-family: $font-primary;
-    font-weight: $medium;
-    font-size: $f-s-18;
+    @include fonts($fs:$f-s-18);
     margin-top: 1.5rem;
     background: transparent;
     border: 2px solid $turquoise;
     color:$primary-red;
     padding: 0.6rem 1.2rem;
-    font-size: 1rem;
     cursor: pointer;
 
 
