--- a/src/app/shared/footer/footer.component.scss
+++ b/src/app/shared/footer/footer.component.scss
@@ -12,10 +12,7 @@
   @include flex-center($fd: column);
   
   >span{
-    color: $primary-red;
-    font-family: $font-primary;
-    font-weight: $regular;
-    font-size: $f-s-24;
+    @include fonts($fs:$f-s-24);
   }
   
   >div{
@@ -23,11 +20,7 @@
     width: 100%;
     
     a{
-      color: $primary-red;
-      font-family: $font-primary;
-      font-weight: $regular;
-      font-size: $f-s-14;
-      
+      @include fonts($fs:$f-s-14);
       &:hover{
         text-decoration: underline;
       }
@@ -39,16 +32,10 @@
 
 .logo {
   @include flex-center($fd:column, $jc:flex-start);
+  @include fonts($ff:$font-logo,$fw:$bold,$lh:100%);
   height: 100%;
-  color: $primary-red;
-  font-family:$font-logo;
-  font-weight: $bold;
-  font-size: $f-s-54;
 p{
-  color: $primary-red;
-  font-family:$font-primary;
-  font-weight: $bold;
-  font-size: $f-s-12;
+  @include fonts($fw:$bold,$fs:$f-s-12);
 }
 }
 
